# glitchtip-telegram-bridge

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
